Rename api operations for more sane defaults.
